Backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir PUNTOCOMA
Rule 5     instruccion -> asignacion PUNTOCOMA
Rule 6     instruccion -> array PUNTOCOMA
Rule 7     instruccion -> condicional PUNTOCOMA
Rule 8     instruccion -> whilee PUNTOCOMA
Rule 9     instruccion -> forr PUNTOCOMA
Rule 10    instruccion -> struct PUNTOCOMA
Rule 11    instruccion -> functionn PUNTOCOMA
Rule 12    instruccion -> llamada PUNTOCOMA
Rule 13    instruccion -> BREAKk PUNTOCOMA
Rule 14    instruccion -> RETURNN PUNTOCOMA
Rule 15    instruccion -> CONTINUEE PUNTOCOMA
Rule 16    instruccion -> PUSHH PUNTOCOMA
Rule 17    instruccion -> POPP PUNTOCOMA
Rule 18    instruccion -> LENGHTT PUNTOCOMA
Rule 19    PUSHH -> RPUSH PARIZQ expresion COMA expresion PARDER
Rule 20    POPP -> RPOP PARIZQ expresion PARDER
Rule 21    LENGHTT -> RLENGTH PARIZQ expresion PARDER
Rule 22    condicional -> if_ RELSE LLAVEIZQ instrucciones LLAVEDER
Rule 23    condicional -> if_
Rule 24    BREAKk -> RBREAK
Rule 25    CONTINUEE -> RCONTINUE
Rule 26    RETURNN -> RRETURN
Rule 27    RETURNN -> RRETURN expresion
Rule 28    if_ -> RIF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 29    if_ -> if_ RELSEIF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 30    whilee -> RWHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 31    forr -> RFOR PARIZQ RLET ID ROF expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 32    forr -> RFOR PARIZQ RLET ID ROF expresion PUNTOCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 33    asignacion -> RLET ID IGUAL expresion
Rule 34    asignacion -> RLET ID DOSPUNTOS tipo IGUAL expresion
Rule 35    asignacion -> RLET ID DOSPUNTOS ID IGUAL expresion
Rule 36    array -> RLET ID number_array lista_id IGUAL expresion
Rule 37    array -> RLET ID number_array IGUAL expresion
Rule 38    asignacion -> ID lista_id IGUAL expresion
Rule 39    lista_id -> lista_id COMA ID
Rule 40    lista_id -> lista_id COMA ID number_array
Rule 41    lista_id -> COMA ID
Rule 42    lista_id -> PUNTO ID number_array
Rule 43    llamada -> ID PARIZQ parametro_print PARDER
Rule 44    llamada -> ID PARIZQ PARDER
Rule 45    functionn -> RFUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 46    functionn -> RFUNCTION ID PARIZQ parametros_function PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 47    parametros_function -> parametros_function COMA ID
Rule 48    parametros_function -> parametros_function COMA ID DOSPUNTOS tipo
Rule 49    parametros_function -> parametros_function COMA ID DOSPUNTOS ID
Rule 50    parametros_function -> ID
Rule 51    parametros_function -> ID DOSPUNTOS tipo
Rule 52    parametros_function -> ID DOSPUNTOS ID
Rule 53    struct -> RINTERFACE ID LLAVEIZQ parametros_struct LLAVEDER
Rule 54    parametros_struct -> parametros_struct parametro_struct
Rule 55    parametros_struct -> parametro_struct
Rule 56    parametro_struct -> ID PUNTOCOMA
Rule 57    parametro_struct -> ID DOSPUNTOS tipo PUNTOCOMA
Rule 58    parametro_struct -> ID DOSPUNTOS ID PUNTOCOMA
Rule 59    imprimir -> RCONSOLE PUNTO RLOG PARIZQ PARDER
Rule 60    parametro_print -> parametro_print COMA expresion
Rule 61    parametro_print -> expresion
Rule 62    tipo -> NUMBER
Rule 63    tipo -> RBOOL
Rule 64    tipo -> RSTRING
Rule 65    tipo -> RANY
Rule 66    tipo -> RNULL
Rule 67    expresion -> exp_struct
Rule 68    exp_struct -> exp_struct PUNTO ID
Rule 69    exp_struct -> exp_struct PUNTO ID number_array
Rule 70    exp_struct -> ID
Rule 71    exp_struct -> ID number_array
Rule 72    number_array -> CORIZQ expresion CORDER
Rule 73    number_array -> number_array CORIZQ expresion CORDER
Rule 74    expresion -> CORIZQ expresion_exp CORDER
Rule 75    expresion_exp -> expresion_exp COMA expresion
Rule 76    expresion_exp -> expresion
Rule 77    expresion -> ID PARIZQ parametro_print PARDER
Rule 78    expresion -> RPUSH NOT PARIZQ expresion COMA expresion PARDER
Rule 79    expresion -> RPOP NOT PARIZQ expresion PARDER
Rule 80    expresion -> RLENGTH PARIZQ expresion PARDER
Rule 81    expresion -> RTOFIXED PARIZQ expresion PARDER
Rule 82    expresion -> RTOSTRING PARIZQ expresion PARDER
Rule 83    expresion -> RTOEXPONENTIAL PARIZQ expresion PARDER
Rule 84    expresion -> RTYPEOF PARIZQ expresion PARDER
Rule 85    expresion -> RTOUPPERCASE PARIZQ expresion PARDER
Rule 86    expresion -> RTOLOWERCASE PARIZQ expresion PARDER
Rule 87    expresion -> expresion MAS expresion
Rule 88    expresion -> expresion MENOS expresion
Rule 89    expresion -> expresion POR expresion
Rule 90    expresion -> expresion DIVI expresion
Rule 91    expresion -> expresion POTENCIA expresion
Rule 92    expresion -> expresion MODULO expresion
Rule 93    expresion -> expresion IGUALIGUAL expresion
Rule 94    expresion -> expresion DIFERENTE expresion
Rule 95    expresion -> expresion MAYOR expresion
Rule 96    expresion -> expresion MENOR expresion
Rule 97    expresion -> expresion MAYORIGUAL expresion
Rule 98    expresion -> expresion MENORIGUAL expresion
Rule 99    expresion -> expresion AND expresion
Rule 100   expresion -> expresion OR expresion
Rule 101   expresion -> NOT expresion
Rule 102   expresion -> NUMBER
Rule 103   expresion -> RSTRING
Rule 104   expresion -> RFALSE
Rule 105   expresion -> RTRUE
Rule 106   expresion -> RANY
Rule 107   expresion -> ID
Rule 108   expresion -> PARIZQ expresion PARDER

Terminals, with rules where they appear

AND                  : 99
COMA                 : 19 39 40 41 47 48 49 60 75 78
CORDER               : 72 73 74
CORIZQ               : 72 73 74
DIFERENTE            : 94
DIVI                 : 90
DOSPUNTOS            : 34 35 48 49 51 52 57 58
ID                   : 31 32 33 34 35 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 49 50 51 52 52 53 56 57 58 58 68 69 70 71 77 107
IGUAL                : 33 34 35 36 37 38
IGUALIGUAL           : 93
LLAVEDER             : 22 28 29 30 31 32 45 46 53
LLAVEIZQ             : 22 28 29 30 31 32 45 46 53
MAS                  : 87
MAYOR                : 95
MAYORIGUAL           : 97
MENOR                : 96
MENORIGUAL           : 98
MENOS                : 88
MODULO               : 92
NOT                  : 78 79 101
NUMBER               : 62 102
OR                   : 100
PARDER               : 19 20 21 28 29 30 31 32 43 44 45 46 59 77 78 79 80 81 82 83 84 85 86 108
PARIZQ               : 19 20 21 28 29 30 31 32 43 44 45 46 59 77 78 79 80 81 82 83 84 85 86 108
POR                  : 89
POTENCIA             : 91
PUNTO                : 42 59 68 69
PUNTOCOMA            : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 32 56 57 58
RANY                 : 65 106
RBOOL                : 63
RBREAK               : 24
RCONSOLE             : 59
RCONTINUE            : 25
RELSE                : 22
RELSEIF              : 29
RFALSE               : 104
RFOR                 : 31 32
RFUNCTION            : 45 46
RIF                  : 28
RINTERFACE           : 53
RLENGTH              : 21 80
RLET                 : 31 32 33 34 35 36 37
RLOG                 : 59
RNULL                : 66
ROF                  : 31 32
RPOP                 : 20 79
RPUSH                : 19 78
RRETURN              : 26 27
RSTRING              : 64 103
RTOEXPONENTIAL       : 83
RTOFIXED             : 81
RTOLOWERCASE         : 86
RTOSTRING            : 82
RTOUPPERCASE         : 85
RTRUE                : 105
RTYPEOF              : 84
RWHILE               : 30
error                : 

Nonterminals, with rules where they appear

BREAKk               : 13
CONTINUEE            : 15
LENGHTT              : 18
POPP                 : 17
PUSHH                : 16
RETURNN              : 14
array                : 6
asignacion           : 5
condicional          : 7
exp_struct           : 67 68 69
expresion            : 19 19 20 21 27 28 29 30 31 32 32 33 34 35 36 37 38 60 61 72 73 75 76 78 78 79 80 81 82 83 84 85 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 108
expresion_exp        : 74 75
forr                 : 9
functionn            : 11
if_                  : 22 23 29
imprimir             : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 22 28 29 30 31 32 45 46
lista_id             : 36 38 39 40
llamada              : 12
number_array         : 36 37 40 42 69 71 73
parametro_print      : 43 60 77
parametro_struct     : 54 55
parametros_function  : 46 47 48 49
parametros_struct    : 53 54
struct               : 10
tipo                 : 34 48 51 57
whilee               : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir PUNTOCOMA
    (5) instruccion -> . asignacion PUNTOCOMA
    (6) instruccion -> . array PUNTOCOMA
    (7) instruccion -> . condicional PUNTOCOMA
    (8) instruccion -> . whilee PUNTOCOMA
    (9) instruccion -> . forr PUNTOCOMA
    (10) instruccion -> . struct PUNTOCOMA
    (11) instruccion -> . functionn PUNTOCOMA
    (12) instruccion -> . llamada PUNTOCOMA
    (13) instruccion -> . BREAKk PUNTOCOMA
    (14) instruccion -> . RETURNN PUNTOCOMA
    (15) instruccion -> . CONTINUEE PUNTOCOMA
    (16) instruccion -> . PUSHH PUNTOCOMA
    (17) instruccion -> . POPP PUNTOCOMA
    (18) instruccion -> . LENGHTT PUNTOCOMA
    (59) imprimir -> . RCONSOLE PUNTO RLOG PARIZQ PARDER
    (33) asignacion -> . RLET ID IGUAL expresion
    (34) asignacion -> . RLET ID DOSPUNTOS tipo IGUAL expresion
    (35) asignacion -> . RLET ID DOSPUNTOS ID IGUAL expresion
    (38) asignacion -> . ID lista_id IGUAL expresion
    (36) array -> . RLET ID number_array lista_id IGUAL expresion
    (37) array -> . RLET ID number_array IGUAL expresion
    (22) condicional -> . if_ RELSE LLAVEIZQ instrucciones LLAVEDER
    (23) condicional -> . if_
    (30) whilee -> . RWHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (31) forr -> . RFOR PARIZQ RLET ID ROF expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (32) forr -> . RFOR PARIZQ RLET ID ROF expresion PUNTOCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (53) struct -> . RINTERFACE ID LLAVEIZQ parametros_struct LLAVEDER
    (45) functionn -> . RFUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (46) functionn -> . RFUNCTION ID PARIZQ parametros_function PARDER LLAVEIZQ instrucciones LLAVEDER
    (43) llamada -> . ID PARIZQ parametro_print PARDER
    (44) llamada -> . ID PARIZQ PARDER
    (24) BREAKk -> . RBREAK
    (26) RETURNN -> . RRETURN
    (27) RETURNN -> . RRETURN expresion
    (25) CONTINUEE -> . RCONTINUE
    (19) PUSHH -> . RPUSH PARIZQ expresion COMA expresion PARDER
    (20) POPP -> . RPOP PARIZQ expresion PARDER
    (21) LENGHTT -> . RLENGTH PARIZQ expresion PARDER
    (28) if_ -> . RIF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (29) if_ -> . if_ RELSEIF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER

    RCONSOLE        shift and go to state 19
    RLET            shift and go to state 20
    ID              shift and go to state 21
    RWHILE          shift and go to state 23
    RFOR            shift and go to state 24
    RINTERFACE      shift and go to state 25
    RFUNCTION       shift and go to state 26
    RBREAK          shift and go to state 27
    RRETURN         shift and go to state 28
    RCONTINUE       shift and go to state 29
    RPUSH           shift and go to state 30
    RPOP            shift and go to state 31
    RLENGTH         shift and go to state 32
    RIF             shift and go to state 33

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir                       shift and go to state 4
    asignacion                     shift and go to state 5
    array                          shift and go to state 6
    condicional                    shift and go to state 7
    whilee                         shift and go to state 8
    forr                           shift and go to state 9
    struct                         shift and go to state 10
    functionn                      shift and go to state 11
    llamada                        shift and go to state 12
    BREAKk                         shift and go to state 13
    RETURNN                        shift and go to state 14
    CONTINUEE                      shift and go to state 15
    PUSHH                          shift and go to state 16
    POPP                           shift and go to state 17
    LENGHTT                        shift and go to state 18
    if_                            shift and go to state 22

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir PUNTOCOMA
    (5) instruccion -> . asignacion PUNTOCOMA
    (6) instruccion -> . array PUNTOCOMA
    (7) instruccion -> . condicional PUNTOCOMA
    (8) instruccion -> . whilee PUNTOCOMA
    (9) instruccion -> . forr PUNTOCOMA
    (10) instruccion -> . struct PUNTOCOMA
    (11) instruccion -> . functionn PUNTOCOMA
    (12) instruccion -> . llamada PUNTOCOMA
    (13) instruccion -> . BREAKk PUNTOCOMA
    (14) instruccion -> . RETURNN PUNTOCOMA
    (15) instruccion -> . CONTINUEE PUNTOCOMA
    (16) instruccion -> . PUSHH PUNTOCOMA
    (17) instruccion -> . POPP PUNTOCOMA
    (18) instruccion -> . LENGHTT PUNTOCOMA
    (59) imprimir -> . RCONSOLE PUNTO RLOG PARIZQ PARDER
    (33) asignacion -> . RLET ID IGUAL expresion
    (34) asignacion -> . RLET ID DOSPUNTOS tipo IGUAL expresion
    (35) asignacion -> . RLET ID DOSPUNTOS ID IGUAL expresion
    (38) asignacion -> . ID lista_id IGUAL expresion
    (36) array -> . RLET ID number_array lista_id IGUAL expresion
    (37) array -> . RLET ID number_array IGUAL expresion
    (22) condicional -> . if_ RELSE LLAVEIZQ instrucciones LLAVEDER
    (23) condicional -> . if_
    (30) whilee -> . RWHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (31) forr -> . RFOR PARIZQ RLET ID ROF expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (32) forr -> . RFOR PARIZQ RLET ID ROF expresion PUNTOCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (53) struct -> . RINTERFACE ID LLAVEIZQ parametros_struct LLAVEDER
    (45) functionn -> . RFUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (46) functionn -> . RFUNCTION ID PARIZQ parametros_function PARDER LLAVEIZQ instrucciones LLAVEDER
    (43) llamada -> . ID PARIZQ parametro_print PARDER
    (44) llamada -> . ID PARIZQ PARDER
    (24) BREAKk -> . RBREAK
    (26) RETURNN -> . RRETURN
    (27) RETURNN -> . RRETURN expresion
    (25) CONTINUEE -> . RCONTINUE
    (19) PUSHH -> . RPUSH PARIZQ expresion COMA expresion PARDER
    (20) POPP -> . RPOP PARIZQ expresion PARDER
    (21) LENGHTT -> . RLENGTH PARIZQ expresion PARDER
    (28) if_ -> . RIF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (29) if_ -> . if_ RELSEIF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER

    $end            reduce using rule 1 (init -> instrucciones .)
    RCONSOLE        shift and go to state 19
    RLET            shift and go to state 20
    ID              shift and go to state 21
    RWHILE          shift and go to state 23
    RFOR            shift and go to state 24
    RINTERFACE      shift and go to state 25
    RFUNCTION       shift and go to state 26
    RBREAK          shift and go to state 27
    RRETURN         shift and go to state 28
    RCONTINUE       shift and go to state 29
    RPUSH           shift and go to state 30
    RPOP            shift and go to state 31
    RLENGTH         shift and go to state 32
    RIF             shift and go to state 33

    instruccion                    shift and go to state 34
    imprimir                       shift and go to state 4
    asignacion                     shift and go to state 5
    array                          shift and go to state 6
    condicional                    shift and go to state 7
    whilee                         shift and go to state 8
    forr                           shift and go to state 9
    struct                         shift and go to state 10
    functionn                      shift and go to state 11
    llamada                        shift and go to state 12
    BREAKk                         shift and go to state 13
    RETURNN                        shift and go to state 14
    CONTINUEE                      shift and go to state 15
    PUSHH                          shift and go to state 16
    POPP                           shift and go to state 17
    LENGHTT                        shift and go to state 18
    if_                            shift and go to state 22

state 3

    (3) instrucciones -> instruccion .

    RCONSOLE        reduce using rule 3 (instrucciones -> instruccion .)
    RLET            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RINTERFACE      reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    RPUSH           reduce using rule 3 (instrucciones -> instruccion .)
    RPOP            reduce using rule 3 (instrucciones -> instruccion .)
    RLENGTH         reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35


state 5

    (5) instruccion -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 36


state 6

    (6) instruccion -> array . PUNTOCOMA

    PUNTOCOMA       shift and go to state 37


state 7

    (7) instruccion -> condicional . PUNTOCOMA

    PUNTOCOMA       shift and go to state 38


state 8

    (8) instruccion -> whilee . PUNTOCOMA

    PUNTOCOMA       shift and go to state 39


state 9

    (9) instruccion -> forr . PUNTOCOMA

    PUNTOCOMA       shift and go to state 40


state 10

    (10) instruccion -> struct . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41


state 11

    (11) instruccion -> functionn . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42


state 12

    (12) instruccion -> llamada . PUNTOCOMA

    PUNTOCOMA       shift and go to state 43


state 13

    (13) instruccion -> BREAKk . PUNTOCOMA

    PUNTOCOMA       shift and go to state 44


state 14

    (14) instruccion -> RETURNN . PUNTOCOMA

    PUNTOCOMA       shift and go to state 45


state 15

    (15) instruccion -> CONTINUEE . PUNTOCOMA

    PUNTOCOMA       shift and go to state 46


state 16

    (16) instruccion -> PUSHH . PUNTOCOMA

    PUNTOCOMA       shift and go to state 47


state 17

    (17) instruccion -> POPP . PUNTOCOMA

    PUNTOCOMA       shift and go to state 48


state 18

    (18) instruccion -> LENGHTT . PUNTOCOMA

    PUNTOCOMA       shift and go to state 49


state 19

    (59) imprimir -> RCONSOLE . PUNTO RLOG PARIZQ PARDER

    PUNTO           shift and go to state 50


state 20

    (33) asignacion -> RLET . ID IGUAL expresion
    (34) asignacion -> RLET . ID DOSPUNTOS tipo IGUAL expresion
    (35) asignacion -> RLET . ID DOSPUNTOS ID IGUAL expresion
    (36) array -> RLET . ID number_array lista_id IGUAL expresion
    (37) array -> RLET . ID number_array IGUAL expresion

    ID              shift and go to state 51


state 21

    (38) asignacion -> ID . lista_id IGUAL expresion
    (43) llamada -> ID . PARIZQ parametro_print PARDER
    (44) llamada -> ID . PARIZQ PARDER
    (39) lista_id -> . lista_id COMA ID
    (40) lista_id -> . lista_id COMA ID number_array
    (41) lista_id -> . COMA ID
    (42) lista_id -> . PUNTO ID number_array

    PARIZQ          shift and go to state 53
    COMA            shift and go to state 54
    PUNTO           shift and go to state 55

    lista_id                       shift and go to state 52

state 22

    (22) condicional -> if_ . RELSE LLAVEIZQ instrucciones LLAVEDER
    (23) condicional -> if_ .
    (29) if_ -> if_ . RELSEIF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER

    RELSE           shift and go to state 56
    PUNTOCOMA       reduce using rule 23 (condicional -> if_ .)
    RELSEIF         shift and go to state 57


state 23

    (30) whilee -> RWHILE . PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER

    PARIZQ          shift and go to state 58


state 24

    (31) forr -> RFOR . PARIZQ RLET ID ROF expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (32) forr -> RFOR . PARIZQ RLET ID ROF expresion PUNTOCOMA expresion PARDER LLAVEIZQ instrucciones LLAVEDER

    PARIZQ          shift and go to state 59


state 25

    (53) struct -> RINTERFACE . ID LLAVEIZQ parametros_struct LLAVEDER

    ID              shift and go to state 60


state 26

    (45) functionn -> RFUNCTION . ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (46) functionn -> RFUNCTION . ID PARIZQ parametros_function PARDER LLAVEIZQ instrucciones LLAVEDER

    ID              shift and go to state 61


state 27

    (24) BREAKk -> RBREAK .

    PUNTOCOMA       reduce using rule 24 (BREAKk -> RBREAK .)


state 28

    (26) RETURNN -> RRETURN .
    (27) RETURNN -> RRETURN . expresion
    (67) expresion -> . exp_struct
    (74) expresion -> . CORIZQ expresion_exp CORDER
    (77) expresion -> . ID PARIZQ parametro_print PARDER
    (78) expresion -> . RPUSH NOT PARIZQ expresion COMA expresion PARDER
    (79) expresion -> . RPOP NOT PARIZQ expresion PARDER
    (80) expresion -> . RLENGTH PARIZQ expresion PARDER
    (81) expresion -> . RTOFIXED PARIZQ expresion PARDER
    (82) expresion -> . RTOSTRING PARIZQ expresion PARDER
    (83) expresion -> . RTOEXPONENTIAL PARIZQ expresion PARDER
    (84) expresion -> . RTYPEOF PARIZQ expresion PARDER
    (85) expresion -> . RTOUPPERCASE PARIZQ expresion PARDER
    (86) expresion -> . RTOLOWERCASE PARIZQ expresion PARDER
    (87) expresion -> . expresion MAS expresion
    (88) expresion -> . expresion MENOS expresion
    (89) expresion -> . expresion POR expresion
    (90) expresion -> . expresion DIVI expresion
    (91) expresion -> . expresion POTENCIA expresion
    (92) expresion -> . expresion MODULO expresion
    (93) expresion -> . expresion IGUALIGUAL expresion
    (94) expresion -> . expresion DIFERENTE expresion
    (95) expresion -> . expresion MAYOR expresion
    (96) expresion -> . expresion MENOR expresion
    (97) expresion -> . expresion MAYORIGUAL expresion
    (98) expresion -> . expresion MENORIGUAL expresion
    (99) expresion -> . expresion AND expresion
    (100) expresion -> . expresion OR expresion
    (101) expresion -> . NOT expresion
    (102) expresion -> . NUMBER
    (103) expresion -> . RSTRING
    (104) expresion -> . RFALSE
    (105) expresion -> . RTRUE
    (106) expresion -> . RANY
    (107) expresion -> . ID
    (108) expresion -> . PARIZQ expresion PARDER
    (68) exp_struct -> . exp_struct PUNTO ID
    (69) exp_struct -> . exp_struct PUNTO ID number_array
    (70) exp_struct -> . ID
    (71) exp_struct -> . ID number_array

    PUNTOCOMA       reduce using rule 26 (RETURNN -> RRETURN .)
    CORIZQ          shift and go to state 64
    ID              shift and go to state 65
    RPUSH           shift and go to state 67
    RPOP            shift and go to state 69
    RLENGTH         shift and go to state 70
    RTOFIXED        shift and go to state 71
    RTOSTRING       shift and go to state 72
    RTOEXPONENTIAL  shift and go to state 73
    RTYPEOF         shift and go to state 74
    RTOUPPERCASE    shift and go to state 75
    RTOLOWERCASE    shift and go to state 76
    NOT             shift and go to state 68
    NUMBER          shift and go to state 77
    RSTRING         shift and go to state 78
    RFALSE          shift and go to state 79
    RTRUE           shift and go to state 80
    RANY            shift and go to state 81
    PARIZQ          shift and go to state 66

    expresion                      shift and go to state 62
    exp_struct                     shift and go to state 63

state 29

    (25) CONTINUEE -> RCONTINUE .

    PUNTOCOMA       reduce using rule 25 (CONTINUEE -> RCONTINUE .)


state 30

    (19) PUSHH -> RPUSH . PARIZQ expresion COMA expresion PARDER

    PARIZQ          shift and go to state 82


state 31

    (20) POPP -> RPOP . PARIZQ expresion PARDER

    PARIZQ          shift and go to state 83


state 32

    (21) LENGHTT -> RLENGTH . PARIZQ expresion PARDER

    PARIZQ          shift and go to state 84


state 33

    (28) if_ -> RIF . PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER

    PARIZQ          shift and go to state 85


state 34

    (2) instrucciones -> instrucciones instruccion .

    RCONSOLE        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RLET            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RWHILE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFOR            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RINTERFACE      reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFUNCTION       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RBREAK          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RRETURN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RCONTINUE       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPUSH           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPOP            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RLENGTH         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVEDER        reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 35

    (4) instruccion -> imprimir PUNTOCOMA .

    RCONSOLE        reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RLET            reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    ID              reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RWHILE          reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RFOR            reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RINTERFACE      reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RFUNCTION       reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RBREAK          reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RRETURN         reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RCONTINUE       reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RPUSH           reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RPOP            reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RLENGTH         reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    RIF             reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    $end            reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)
    LLAVEDER        reduce using rule 4 (instruccion -> imprimir PUNTOCOMA .)


state 36

    (5) instruccion -> asignacion PUNTOCOMA .

    RCONSOLE        reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RLET            reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    ID              reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RWHILE          reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RFOR            reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RINTERFACE      reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RFUNCTION       reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RBREAK          reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RRETURN         reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RCONTINUE       reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RPUSH           reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RPOP            reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RLENGTH         reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    RIF             reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    $end            reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)
    LLAVEDER        reduce using rule 5 (instruccion -> asignacion PUNTOCOMA .)


state 37

    (6) instruccion -> array PUNTOCOMA .
